<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_activity_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/camera_focus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_margin="16dp"
        android:backgroundTint="@android:color/white"
        app:fabSize="mini"
        app:maxImageSize="25dp"
        app:srcCompat="@drawable/ic_baseline_refocus_24"
        android:contentDescription="@string/descCameraFocus" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:maxImageSize="50dp"
        app:srcCompat="@drawable/signalement_icon_android"
        android:contentDescription="@string/descReportButton" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/parameters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="16dp"
        app:maxImageSize="50dp"
        app:srcCompat="@drawable/settings_icon_android"
        android:contentDescription="@string/descParameterButton" />


    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/notif_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/notifs_accident"
        android:visibility="gone">


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notifImage" />

        <ImageView
            android:id="@+id/notifImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/descNotifImage" />


        <TextView
            android:id="@+id/notifText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_extra_bold"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="italic"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/notifPouce"

            app:layout_constraintStart_toEndOf="@+id/notifImage"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/notifPouce"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/thumbImage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/confirmation_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/notifs_accident"
        android:padding="10dp"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBarConfirm"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/notifImageConfirm"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toTopOf="@+id/progressBarConfirm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/descNotifConfirm" />

        <ImageView
            android:id="@+id/close"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:src="@drawable/close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/close" />

        <TextView
            android:id="@+id/notifTextConfirm1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_extra_bold"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="italic"


            app:layout_constraintBottom_toTopOf="@+id/progressBarConfirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/notifImageConfirm"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/notifTextConfirm2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_extra_bold"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="italic"


            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBarConfirm" />

        <ImageView
            android:id="@+id/notifThumbUp"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="10dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/notifTextConfirm2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notifTextConfirm2"
            android:contentDescription="@string/thumbUp" />

        <ImageView
            android:id="@+id/notifThumbDown"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/notifTextConfirm2"
            app:layout_constraintTop_toBottomOf="@+id/notifTextConfirm2"
            android:contentDescription="@string/thumbDown" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>