<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OffLineMapMenu">

    <ListView
        android:id="@+id/offlineMapList"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/offlineMapEmptyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addFirstMap"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offlineMapList" />

    <ImageView
        android:id="@+id/offlineMapArrow"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:visibility="gone"
        android:src="@drawable/baseline_keyboard_arrow_down_black_48dp"
        app:layout_constraintBottom_toTopOf="@+id/downloadMapButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offlineMapEmptyText"
        android:contentDescription="@string/arrow" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/downloadMapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/colorPrimary"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/offlineMapArrow"
        app:maxImageSize="25dp"
        app:srcCompat="@drawable/plus"
        android:contentDescription="@string/addMap"/>

</androidx.constraintlayout.widget.ConstraintLayout>